--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <!-- Title -->
     <h1>Unsplash API - Infinite Scroll</h1>
     <div class="loader" id="loader">
-        <img src="loader.svg" alt="loading">
+        <img src="loader.svg" alt="loading" hidden>
+    </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container">
+        <img src="https://images.unsplash.com/photo-1593950752465-e62449055e13?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1593950752465-e62449055e13?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1593950752465-e62449055e13?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="">
     </div>
     <!-- Script -->
     <script src="script.js"></script>
