Update Display function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <img src="loader.svg" alt="loading" hidden>
     </div>
     <!-- Image Container -->
-    <div class="image-container" id="image-container"></div>
+    <div class="image-container" id="image-container">
+        
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
