--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Title -->
     <h1>Unsplash API - Infinite Scroll</h1>
     <div class="loader" id="loader">
-        <img src="loader.svg" alt="loading" hidden>
+        <img src="loader.svg" alt="loading">
     </div>
     <!-- Image Container -->
     <div class="image-container" id="image-container">
